--- a/PinSpot/app/src/main/res/layout/fragment_forgot_password.xml
+++ b/PinSpot/app/src/main/res/layout/fragment_forgot_password.xml
@@ -31,7 +31,7 @@
                 android:id="@+id/loginText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Password dimenticata"
+                android:text="@string/forgot_password_title"
                 android:textAlignment="center"
                 android:textColor="@color/primaryDarkColor"
                 android:textSize="30dp"
@@ -45,7 +45,7 @@
                 android:background="@drawable/edit_text_bg"
                 android:drawableLeft="@drawable/ic_baseline_person_outline_24"
                 android:drawablePadding="8dp"
-                android:hint="Mail"
+                android:hint="@string/e_mail_address"
                 android:padding="8dp"
                 android:textColor="@color/white"
                 android:textColorHint="@color/white" />
@@ -57,7 +57,7 @@
                 android:layout_height="60dp"
                 android:layout_marginTop="30dp"
                 android:backgroundTint="@color/primaryDarkColor"
-                android:text="Recupera Password"
+                android:text="@string/recover_password_now"
                 android:textSize="18sp"
                 app:cornerRadius="20dp" />
 
