Fix bug apertura signup

--- a/PinSpot/app/src/main/res/layout/fragment_forgot_password.xml
+++ b/PinSpot/app/src/main/res/layout/fragment_forgot_password.xml
@@ -9,7 +9,7 @@
     android:orientation="vertical"
     android:gravity="center"
     android:background="@drawable/sfondo2"
-    tools:context=".ui.welcome.LoginActivity" >
+    tools:context=".ui.welcome.ForgotPasswordFragment" >
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
