--- a/PinSpot/app/src/main/res/layout/fragment_sign_up.xml
+++ b/PinSpot/app/src/main/res/layout/fragment_sign_up.xml
@@ -54,7 +54,9 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_begin="15dp" /> -->
-
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -150,7 +152,7 @@
 
         android:gravity="center"
         android:orientation="horizontal" />  -->
-
+    </LinearLayout>
     </ScrollView>
 </LinearLayout>
 
