--- a/PinSpot/app/src/main/res/layout/fragment_login.xml
+++ b/PinSpot/app/src/main/res/layout/fragment_login.xml
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:gravity="center"
     android:background="@drawable/sfondo2"
-    tools:context=".ui.welcome.LoginFragment">
+    tools:context=".ui.welcome.LoginFragment"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <com.google.android.material.progressindicator.LinearProgressIndicator
         android:id="@+id/progress_bar"
@@ -24,150 +22,159 @@
         app:layout_constraintTop_toTopOf="parent"
         app:trackColor="@color/primaryColor" />
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline2"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="30dp"
-        app:cardCornerRadius="30dp"
-        app:cardElevation="20dp"
-        android:background="@color/white">
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="15dp" />
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fillViewport="true">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:orientation="vertical"
-            android:padding="24dp">
-
-
-            <TextView
-                android:id="@+id/loginText"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/login"
-                android:textAlignment="center"
-                android:textColor="@color/primaryDarkColor"
-                android:textSize="36sp"
-                android:textStyle="bold" />
+                android:layout_margin="30dp"
+                app:cardCornerRadius="30dp"
+                app:cardElevation="20dp"
+                android:background="@drawable/button_bg">
 
-            <EditText
-                android:id="@+id/edtEmail"
-                style="@style/Button"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_marginTop="40dp"
-                android:background="@drawable/edit_text_bg"
-                android:drawableLeft="@drawable/ic_baseline_person_outline_24"
-                android:drawablePadding="8dp"
-                android:hint="@string/e_mail_address"
-                android:padding="8dp"
-                android:textColor="@color/white"
-                android:textColorHint="@color/white" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:orientation="vertical"
+                    android:padding="24dp">
 
-            <EditText
-                android:id="@+id/edtPassword"
-                style="@style/Button"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_marginTop="20dp"
-                android:background="@drawable/edit_text_bg"
-                android:drawableLeft="@drawable/ic_baseline_info_24"
-                android:drawablePadding="8dp"
-                android:hint="@string/password"
-                android:inputType="textPassword"
-                android:padding="8dp"
-                android:textColor="@color/white"
-                android:textColorHighlight="@color/cardview_dark_background"
-                android:textColorHint="@color/white" />
+
+
+
+                    <TextView
+                        android:id="@+id/loginText"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/login"
+                        android:textAlignment="center"
+                        android:textColor="@color/primaryDarkColor"
+                        android:textSize="36sp"
+                        android:textStyle="bold" />
+
+                    <EditText
+                        android:id="@+id/edtEmail"
+                        style="@style/Button"
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:layout_marginTop="20dp"
+                        android:background="@drawable/edit_text_bg"
+                        android:drawableLeft="@drawable/ic_baseline_person_outline_24"
+                        android:drawablePadding="8dp"
+                        android:hint="@string/e_mail_address"
+                        android:padding="8dp"
+                        android:textColor="@color/white"
+                        android:textColorHint="@color/white" />
+
+                    <EditText
+                        android:id="@+id/edtPassword"
+                        style="@style/Button"
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:layout_marginTop="20dp"
+                        android:background="@drawable/edit_text_bg"
+                        android:drawableLeft="@drawable/ic_baseline_info_24"
+                        android:drawablePadding="8dp"
+                        android:hint="@string/password"
+                        android:inputType="textPassword"
+                        android:padding="8dp"
+                        android:textColor="@color/white"
+                        android:textColorHint="@color/white" />
+
+                    <Button
+                        android:id="@+id/button_login"
+                        android:layout_width="match_parent"
+                        android:layout_height="60dp"
+                        android:layout_marginTop="30dp"
+                        android:backgroundTint="@color/primaryDarkColor"
+                        android:text="@string/login"
+                        android:textSize="18sp"
+                        app:cornerRadius="20dp" />
+                    <Button
+                        android:id="@+id/button_forgot_login_password"
+                        android:layout_width="262dp"
+                        android:layout_height="57dp"
+                        android:background="?android:attr/selectableItemBackground"
+                        android:inputType="textCapSentences"
+                        android:text="@string/forgot_password"
+                        android:layout_gravity="center"
+                        android:textColor="#000000"
+                        app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.5"
+                        app:layout_constraintStart_toEndOf="@+id/textView4" />
+
+
+
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
 
             <Button
-                android:id="@+id/button_login"
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:layout_marginTop="30dp"
+                android:id="@+id/button_open_signup"
+                android:layout_width="250dp"
+                android:layout_height="50dp"
                 android:backgroundTint="@color/primaryDarkColor"
-                android:text="@string/login"
-                android:textSize="18sp"
-                app:cornerRadius="20dp" />
+                android:layout_gravity="center"
+                android:padding="8dp"
+                android:text="@string/invite_to_signup"
+                android:textAlignment="center"
+                android:textSize="14sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/others"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_gravity="center"
+                android:text="@string/or_sign_in_with"
+                android:textStyle="bold" />
+
+            <ImageView
+                android:id="@+id/button_google_login"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_margin="20dp"
+                android:src="@drawable/google"
+                android:layout_gravity="center"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <Button
+                android:id="@+id/skipButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="-70dp"
+                android:layout_gravity="end"
+                android:backgroundTint="@color/primaryDarkColor"
+                android:text="@string/not_now"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.996"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
         </LinearLayout>
-
-    </androidx.cardview.widget.CardView>
-
-    <Button
-        android:id="@+id/button_forgot_login_password"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp"
-        android:padding="8dp"
-        android:background="?android:attr/selectableItemBackground"
-        android:inputType="textCapSentences"
-        android:text="@string/forgot_password"
-        android:textAlignment="center"
-        android:textSize="14sp"
-        android:textStyle="bold" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="8dp"
-        android:text="@string/invite_to_signup"
-        android:backgroundTint="@color/primaryDarkColor"
-        android:textSize="14sp"
-        android:textAlignment="center"
-        android:textStyle="bold"
-        android:id="@+id/button_open_signup"
-        android:layout_marginBottom="5dp"/>
-
-
-
-    <TextView
-        android:id="@+id/others"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@id/socialicons"
-        android:layout_centerHorizontal="true"
-        android:text="@string/or_sign_in_with"
-        android:textStyle="bold"
-        />
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/socialicons"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-
-        android:gravity="center">
-
-
-        <ImageView
-            android:id="@+id/button_google_login"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_margin="20dp"
-            android:src="@drawable/google"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <Button
-            android:id="@+id/skipButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="10dp"
-            android:backgroundTint="@color/primaryDarkColor"
-            android:text="@string/not_now"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.996"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-
+    </ScrollView>
 </LinearLayout>
 
