--- a/PinSpot/app/src/main/res/layout/activity_insert_pin.xml
+++ b/PinSpot/app/src/main/res/layout/activity_insert_pin.xml
@@ -22,12 +22,12 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
+            style="@style/TextWhite"
             android:id="@+id/titleAddNewPin_textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/spot_a_new_place"
             android:textAlignment="center"
-            android:textColor="@color/white"
             android:textSize="36sp"
             android:textStyle="bold"
             app:layout_constraintTop_toBottomOf="@+id/closePinInfo_button"
@@ -138,16 +138,15 @@
             app:layout_constraintTop_toBottomOf="@+id/choosePicFromLocal_button" />
 
         <Button
+            style="@style/Button"
             android:id="@+id/uploadPin_button"
             android:layout_width="128dp"
             android:layout_height="74dp"
             android:layout_marginTop="32dp"
-            android:backgroundTint="@color/primaryColor"
             android:text="@string/spot_it"
             android:textColor="@color/white"
             android:textSize="18sp"
             app:cornerRadius="20dp"
-            app:iconTint="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
