--- a/PinSpot/app/src/main/res/layout/fragment_forgot_password.xml
+++ b/PinSpot/app/src/main/res/layout/fragment_forgot_password.xml
@@ -12,12 +12,13 @@
     tools:context=".ui.welcome.ForgotPasswordFragment" >
 
     <androidx.cardview.widget.CardView
+        style="@style/CardView.Light"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="30dp"
         app:cardCornerRadius="30dp"
         app:cardElevation="20dp"
-        android:background="@color/white">
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -28,16 +29,18 @@
 
 
             <TextView
+                style="@style/TextDark"
                 android:id="@+id/loginText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/forgot_password_title"
                 android:textAlignment="center"
-                android:textColor="@color/primaryDarkColor"
+
                 android:textSize="30dp"
                 android:textStyle="bold" />
 
             <EditText
+                style="@style/Button"
                 android:id="@+id/recoveryEmail_edt"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
@@ -52,11 +55,11 @@
 
 
             <Button
+                style="@style/ButtonDark"
                 android:id="@+id/passwordRecovery_button"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_marginTop="30dp"
-                android:backgroundTint="@color/primaryDarkColor"
                 android:text="@string/recover_password_now"
                 android:textSize="18sp"
                 app:cornerRadius="20dp" />
