--- a/PinSpot/app/src/main/res/layout/fragment_sign_up.xml
+++ b/PinSpot/app/src/main/res/layout/fragment_sign_up.xml
@@ -35,25 +35,6 @@
         android:fillViewport="true">
 
 
-    <!--<com.google.android.material.progressindicator.LinearProgressIndicator
-        android:id="@+id/progress_bar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="?attr/actionBarSize"
-        android:indeterminate="true"
-        android:visibility="gone"
-        app:indicatorColor="@color/primaryDarkColor"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:trackColor="@color/primaryColor" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_begin="15dp" /> -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -76,12 +57,12 @@
 
 
             <TextView
+                style="@style/TextDark"
                 android:id="@+id/loginText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/register_now"
                 android:textAlignment="center"
-                android:textColor="@color/primaryDarkColor"
                 android:textSize="36sp"
                 android:textStyle="bold" />
 
@@ -115,15 +96,16 @@
                 android:textColorHint="@color/white" />
 
             <Button
+                style="@style/ButtonDark"
                 android:id="@+id/button_signup"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_marginTop="30dp"
-                android:backgroundTint="@color/primaryDarkColor"
                 android:text="@string/register_now"
                 android:textSize="18sp"
                 app:cornerRadius="20dp" />
             <Button
+                style="@style/TextBlack"
                 android:id="@+id/button_back_to_login"
                 android:layout_width="262dp"
                 android:layout_height="57dp"
@@ -131,7 +113,6 @@
                 android:inputType="textCapSentences"
                 android:text="@string/have_an_account_log_in"
                 android:layout_gravity="center"
-                android:textColor="#000000"
                 app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
@@ -144,14 +125,7 @@
 
     </androidx.cardview.widget.CardView>
 
-    <!--<LinearLayout
-        android:id="@+id/socialicons"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
 
-        android:gravity="center"
-        android:orientation="horizontal" />  -->
     </LinearLayout>
     </ScrollView>
 </LinearLayout>
