--- a/PinSpot/app/src/main/res/values-night/themes.xml
+++ b/PinSpot/app/src/main/res/values-night/themes.xml
@@ -18,5 +18,44 @@
         <!-- For switches -->
         <item name="switchStyle">@style/Widget.Material3.CompoundButton.MaterialSwitch</item>
     </style>
+    <style name="TextWiew">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textColorHint">@color/white</item>
+        <item name="android:backgroundTint">@color/primaryColor</item>
+        <item name="android:drawableTint">@color/primaryColor</item>
+    </style>
+    <style name="CadWiewWhite">
+        <item name="android:background">@color/white</item>
+    </style>
+    <style name="SecondaryBackgroundColor">
+        <item name="android:background">@color/primaryLightColor</item>
+    </style>
+    <style name="Separator">
+        <item name="android:background">@color/primaryDarkColor</item>
+    </style>
+    <style name="TextWhite">
+        <item name="android:textColor">@color/white</item>
+    </style>
+    <style name="TextBlack">
+        <item name="android:textColor">@color/black</item>
+    </style>
+    <style name="TextColored">
+        <item name="android:textColor">@color/primaryColor</item>
+    </style>
+    <style name="TextDark">
+        <item name="android:textColor">@color/primaryDarkColor</item>
+    </style>
+    <style name="Button">
+        <item name="android:backgroundTint">@color/primaryColor</item>
+    </style>
+    <style name="ButtonDark">
+        <item name="android:backgroundTint">@color/primaryDarkColor</item>
+    </style>
+    <style name="ButtonLigth">
+        <item name="android:backgroundTint">@color/primaryLightColor</item>
+    </style>
 
+    <style name="App.Custom.Indicator" parent="Widget.Material3.BottomNavigationView.ActiveIndicator">
+        <item name="android:color">@color/primaryDarkColor</item>
+    </style>
 </resources>
