--- a/PinSpot/app/src/main/res/layout/fragment_profile.xml
+++ b/PinSpot/app/src/main/res/layout/fragment_profile.xml
@@ -96,9 +96,9 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <View
+                    style="@style/Separator"
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:background="@color/primaryColor"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_bias="1.0"
@@ -157,6 +157,7 @@
                 android:orientation="vertical">
 
                 <Button
+                    style="@style/Button"
                     android:id="@+id/button_user_logout"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
