--- a/PinSpot/app/src/main/res/layout/activity_insert_pin.xml
+++ b/PinSpot/app/src/main/res/layout/activity_insert_pin.xml
@@ -8,9 +8,10 @@
     tools:context=".ui.main.InsertPinActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        style="@style/SecondaryBackgroundColor"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/primaryLightColor">
+        >
 
         <View
             android:id="@+id/divider"
@@ -22,7 +23,6 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            style="@style/TextWhite"
             android:id="@+id/titleAddNewPin_textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -30,6 +30,7 @@
             android:textAlignment="center"
             android:textSize="36sp"
             android:textStyle="bold"
+            android:textColor="@color/white"
             app:layout_constraintTop_toBottomOf="@+id/closePinInfo_button"
             tools:layout_editor_absoluteX="0dp" />
 
@@ -123,7 +124,6 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
             android:background="@drawable/edit_text_bg"
-            android:backgroundTint="@color/primaryColor"
             android:drawableLeft="@drawable/ic_baseline_info_24"
             android:drawablePadding="8dp"
             android:drawableTint="@color/white"
