--- a/PinSpot/app/src/main/res/layout/fragment_pin_info.xml
+++ b/PinSpot/app/src/main/res/layout/fragment_pin_info.xml
@@ -48,21 +48,19 @@
             app:srcCompat="@drawable/placeholder_pin_photo" />
 
         <TextView
-            style="@style/TextBlack"
             android:id="@+id/PinTitle_textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="40dp"
             android:layout_marginTop="60dp"
             android:text="@string/default_pin_title"
-
+            android:textColor="@color/black"
             android:textSize="35sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/pinPhotoImageView" />
 
         <TextView
-            style="@style/TextBlack"
             android:id="@+id/textViewWeatherDescription"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -70,11 +68,12 @@
             android:text="@string/weather"
             android:textSize="20sp"
             android:textStyle="bold"
+            android:textColor="@color/black"
+
             app:layout_constraintEnd_toStartOf="@+id/addPinToFav_fab"
             app:layout_constraintTop_toBottomOf="@+id/PinTitle_textView" />
 
         <TextView
-            style="@style/TextBlack"
             android:id="@+id/textViewTemperature"
             android:layout_width="72dp"
             android:layout_height="32dp"
@@ -83,6 +82,7 @@
             android:text="@string/temperature"
             android:textSize="20sp"
             android:textStyle="bold"
+            android:textColor="@color/black"
             app:layout_constraintStart_toStartOf="@+id/PinTitle_textView"
             app:layout_constraintTop_toBottomOf="@+id/PinTitle_textView" />
 
