--- a/PinSpot/app/src/main/res/values-night/themes.xml
+++ b/PinSpot/app/src/main/res/values-night/themes.xml
@@ -28,31 +28,34 @@
         <item name="android:background">@color/white</item>
     </style>
     <style name="SecondaryBackgroundColor">
-        <item name="android:background">@color/primaryLightColor</item>
-    </style>
-    <style name="Separator">
         <item name="android:background">@color/primaryDarkColor</item>
     </style>
-    <style name="TextWhite">
-        <item name="android:textColor">@color/white</item>
+    <style name="Separator">
+        <item name="android:background">@color/primaryLightColor</item>
     </style>
-    <style name="TextBlack">
+    <style name="TextWhite">
         <item name="android:textColor">@color/black</item>
     </style>
+    <style name="TextBlack">
+        <item name="android:textColor">@color/white</item>
+    </style>
     <style name="TextColored">
-        <item name="android:textColor">@color/primaryColor</item>
+        <item name="android:textColor">@color/primaryLightColor</item>
     </style>
     <style name="TextDark">
-        <item name="android:textColor">@color/primaryDarkColor</item>
+        <item name="android:textColor">@color/primaryLightColor</item>
     </style>
     <style name="Button">
-        <item name="android:backgroundTint">@color/primaryColor</item>
+        <item name="android:backgroundTint">@color/primaryLightColor</item>
+        <item name="android:textColor">@color/white</item>
     </style>
     <style name="ButtonDark">
-        <item name="android:backgroundTint">@color/primaryDarkColor</item>
+        <item name="android:backgroundTint">@color/primaryColor</item>
+        <item name="android:textColor">@color/white</item>
     </style>
     <style name="ButtonLigth">
-        <item name="android:backgroundTint">@color/primaryLightColor</item>
+        <item name="android:backgroundTint">@color/primaryDarkColor</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 
     <style name="App.Custom.Indicator" parent="Widget.Material3.BottomNavigationView.ActiveIndicator">
