--- a/PinSpot/app/src/main/res/values/themes.xml
+++ b/PinSpot/app/src/main/res/values/themes.xml
@@ -47,12 +47,15 @@
     </style>
     <style name="Button">
         <item name="android:backgroundTint">@color/primaryColor</item>
+        <item name="android:textColor">@color/white</item>
     </style>
     <style name="ButtonDark">
         <item name="android:backgroundTint">@color/primaryDarkColor</item>
+        <item name="android:textColor">@color/white</item>
     </style>
     <style name="ButtonLigth">
         <item name="android:backgroundTint">@color/primaryLightColor</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 
     <style name="App.Custom.Indicator" parent="Widget.Material3.BottomNavigationView.ActiveIndicator">
