--- a/PinSpot/app/src/main/res/values/themes.xml
+++ b/PinSpot/app/src/main/res/values/themes.xml
@@ -17,6 +17,8 @@
         <item name="radioButtonStyle">@style/Widget.Material3.CompoundButton.RadioButton</item>
         <!-- For switches -->
         <item name="switchStyle">@style/Widget.Material3.CompoundButton.MaterialSwitch</item>
+
+
     </style>
     <style name="TextWiew">
         <item name="android:textColor">@color/white</item>
@@ -57,7 +59,9 @@
         <item name="android:backgroundTint">@color/primaryLightColor</item>
         <item name="android:textColor">@color/white</item>
     </style>
-
+    <style name="PrimaryBackgroundColor">
+        <item name="android:background">@color/primaryColor</item>
+    </style>
     <style name="App.Custom.Indicator" parent="Widget.Material3.BottomNavigationView.ActiveIndicator">
         <item name="android:color">@color/primaryDarkColor</item>
     </style>
